--- a/theme/[categoria].html
+++ b/theme/[categoria].html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html data-wf-page="609b09e44168f35eed114c94" data-wf-site="609b09e44168f33d25114c8c" lang="es-MX"><head>
+<html data-wf-page="609b09e44168f35eed114c94" data-wf-site="609b09e44168f33d25114c8c" lang="es-MX"><head>{%- seo seo -%}
   <meta charset="utf-8">
-  <title>Catálogo {{ title }} - Europisos</title>
-  <meta content="{{ f_descripcion | escape }}" name="description">
-  <meta content="Catálogo {{ title }} - Europisos" property="og:title">
-  <meta content="{{ f_descripcion | escape }}" property="og:description">
-  <meta content="{{ f_imagen.url | escape }}" property="og:image">
-  <meta content="Catálogo {{ title }} - Europisos" property="twitter:title">
-  <meta content="{{ f_descripcion | escape }}" property="twitter:description">
-  <meta content="{{ f_imagen.url | escape }}" property="twitter:image">
-  <meta property="og:type" content="website">
-  <meta content="summary_large_image" name="twitter:card">
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="/assets/css/normalize.css" rel="stylesheet" type="text/css">
   <link href="/assets/css/components.css" rel="stylesheet" type="text/css">
@@ -39,21 +39,17 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <!--  End Google Tag Manager  -->
 {{ settings.site.header_additional_content }}{%- include "partials/_site-css-variables" -%}<style>.w-video.w-embed {
             aspect-ratio: 16 / 9;
-        }</style><style>picture { border: 0;
-        max-width: 100%;
-        vertical-align: middle;
-        display: inline-block; }</style></head>
+        }</style></head>
 <body>
   <div class="menu">
-    <div class="w-embed w-iframe">
-      <!--  Google Tag Manager (noscript)  -->
+    <div class="w-embed w-iframe"><!--  Google Tag Manager (noscript)  -->
       <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WXKJKD4" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <!--  End Google Tag Manager (noscript)  -->
     </div>
     <div class="container-xlarge">
       <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
         <div class="div-block-12">
-          <a href="{{ links.2f }}" class="brand-3 w-nav-brand">{%- image images.5794294a.url, images.5794294a.alt, '[{"max":479,"size":"22vw"},{"max":767,"size":"65px"},{"max":991,"size":"70px"},{"max":10000,"size":"9vw"}]', 'width="95" height="98" class="logo"' -%}
+          <a href="{{ links.2f }}" class="brand-3 w-nav-brand"><img src="{{ images.5794294a.url }}" width="95" alt="{{ images.5794294a.alt | escape }}" height="98" data-sizes="[{&quot;max&quot;:479,&quot;size&quot;:&quot;22vw&quot;},{&quot;max&quot;:767,&quot;size&quot;:&quot;65px&quot;},{&quot;max&quot;:991,&quot;size&quot;:&quot;70px&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;9vw&quot;}]" class="logo">
             <div class="descripcion-link">{{ texts.5fce79e3 }}</div>
           </a>
           <nav role="navigation" class="nav-menu w-nav-menu">
@@ -89,10 +85,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 </nav>
               </div>
               <a href="{{ links.-32cd245 }}" class="nav-link light">{{ texts.-1dca6e3f }}</a>
-              <a href="{{ links.-7885b0ad }}" class="nav-link light">{{ texts.-7cd47973 }}</a>
-              <a href="{{ links.-5c8c85ba }}" class="nav-link light">{{ texts.37bce494 }}</a>
-              <a href="{{ links.-343edc94 }}" class="nav-link light">{{ texts.75617034 }}</a>
-              <a href="{{ links.-4a5cfeee }}" class="nav-link light">{{ texts.-7a9c091f }}</a>
+              <a href="{{ links.-7885b0ad }}" class="nav-link light">{{ texts.4d0038b0 }}</a>
+              <a href="{{ links.-5c8c85ba }}" class="nav-link light hide">{{ texts.37bce494 }}</a>
+              <a href="{{ links.-343edc94 }}" class="nav-link light hide">{{ texts.75617034 }}</a>
+              <a href="{{ links.-4a5cfeee }}" class="nav-link light hide">{{ texts.-7a9c091f }}</a>
             </div>
             <div class="nav-menu-right">
               <a href="{{ links.-3f05918f }}" class="contacto-header">{{ texts.-1df83b91 }}</a>
@@ -101,7 +97,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </nav>
           <div class="menu-button w-nav-button">
             <div class="con-menu-servicios">
-              <div>{{ texts.-657ae5c3 }}</div>
+              <div>{{ texts.240d5f }}</div>
               <div class="icon-4 w-icon-nav-menu"></div>
             </div>
           </div>
@@ -113,86 +109,24 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <h1 class="titulo-categoria-pisos">{{ title }}</h1>
     <div class="container-div">
       <div class="center">{{ texts.185379ae }}</div>
-      <div data-current="Tab 1" data-easing="ease" data-duration-in="300" data-duration-out="100" class="w-tabs">
-        <div class="tabs-menu-2 w-tab-menu">
-          <a data-w-tab="Tab 1" class="tabs-precios w-inline-block w-tab-link w--current">
-            <div>{{ texts.4d3b0cd }}</div>
-          </a>
-          <a data-w-tab="Tab 2" class="tabs-precios w-inline-block w-tab-link">
-            <div>{{ texts.7d385ea1 }}</div>
-          </a>
-          <a data-w-tab="Tab 3" class="tabs-precios w-inline-block w-tab-link">
-            <div>{{ texts.-7165b55e }}</div>
-          </a>
-          <a data-w-tab="Tab 4" class="tabs-precios w-inline-block w-tab-link">
-            <div>{{ texts.503d6637 }}</div>
-          </a>
-        </div>
-        <div class="w-tab-content">
-          <div data-w-tab="Tab 1" class="w-tab-pane w--tab-active">
-            {%- assign collection = collections.pisos | filter: "f_categoria,eq,DYN_CONTEXT", "ALL", page.inputPath | sort: "-created-on" -%}<div class="collection-list-wrapper-categoria w-dyn-list">
-              {%- unless collection.length == 0 -%}<div role="list" class="contenedor-catalogo catalogo w-dyn-items">
-                {%- for item in collection -%}<div role="listitem" class="contenedor-categoria-piso w-dyn-item">
-                  <a href="{{ item.url }}" class="link-block-piso w-inline-block" style="background-image: url('{{item.data.f_foto-principal-de-producto.url}}');"></a>
-                  <h2 class="h2-small">{{ item.data.title }}</h2>
-                  <a href="{{ item.url }}" class="boton w-button">{{ texts.1b4c8cf8 }}</a>
-                </div>{%- endfor -%}
-              </div>{%- endunless -%}
-              {%- if collection.length == 0 -%}<div class="empty-state-2 w-dyn-empty">
-                <div>{{ texts.-6a49d39f }}</div>
-              </div>{%- endif -%}
-            </div>
-          </div>
-          <div data-w-tab="Tab 2" class="w-tab-pane">
-            {%- assign collection = collections.pisos | filter: "f_precio,eq,Básico", "ALL", page.inputPath | sort: "-created-on" -%}<div class="collection-list-wrapper-categoria w-dyn-list">
-              {%- unless collection.length == 0 -%}<div role="list" class="contenedor-catalogo catalogo w-dyn-items">
-                {%- for item in collection -%}<div role="listitem" class="contenedor-categoria-piso w-dyn-item">
-                  <a href="{{ item.url }}" class="link-block-piso w-inline-block" style="background-image: url('{{item.data.f_foto-principal-de-producto.url}}');"></a>
-                  <h2 class="h2-small">{{ item.data.title }}</h2>
-                  <a href="{{ item.url }}" class="boton w-button">{{ texts.1b4c8cf8 }}</a>
-                </div>{%- endfor -%}
-              </div>{%- endunless -%}
-              {%- if collection.length == 0 -%}<div class="empty-state-2 w-dyn-empty">
-                <div>{{ texts.-6a49d39f }}</div>
-              </div>{%- endif -%}
-            </div>
-          </div>
-          <div data-w-tab="Tab 3" class="w-tab-pane">
-            {%- assign collection = collections.pisos | filter: "f_precio,eq,Estandar", "ALL", page.inputPath | sort: "-created-on" -%}<div class="collection-list-wrapper-categoria w-dyn-list">
-              {%- unless collection.length == 0 -%}<div role="list" class="contenedor-catalogo catalogo w-dyn-items">
-                {%- for item in collection -%}<div role="listitem" class="contenedor-categoria-piso w-dyn-item">
-                  <a href="{{ item.url }}" class="link-block-piso w-inline-block" style="background-image: url('{{item.data.f_foto-principal-de-producto.url}}');"></a>
-                  <h2 class="h2-small">{{ item.data.title }}</h2>
-                  <a href="{{ item.url }}" class="boton w-button">{{ texts.1b4c8cf8 }}</a>
-                </div>{%- endfor -%}
-              </div>{%- endunless -%}
-              {%- if collection.length == 0 -%}<div class="empty-state-2 w-dyn-empty">
-                <div>{{ texts.-6a49d39f }}</div>
-              </div>{%- endif -%}
-            </div>
-          </div>
-          <div data-w-tab="Tab 4" class="w-tab-pane">
-            {%- assign collection = collections.pisos | filter: "f_precio,eq,Premium", "ALL", page.inputPath | sort: "-created-on" -%}<div class="collection-list-wrapper-categoria w-dyn-list">
-              {%- unless collection.length == 0 -%}<div role="list" class="contenedor-catalogo catalogo w-dyn-items">
-                {%- for item in collection -%}<div role="listitem" class="contenedor-categoria-piso w-dyn-item">
-                  <a href="{{ item.url }}" class="link-block-piso w-inline-block" style="background-image: url('{{item.data.f_foto-principal-de-producto.url}}');"></a>
-                  <h2 class="h2-small">{{ item.data.title }}</h2>
-                  <a href="{{ item.url }}" class="boton w-button">{{ texts.1b4c8cf8 }}</a>
-                </div>{%- endfor -%}
-              </div>{%- endunless -%}
-              {%- if collection.length == 0 -%}<div class="empty-state-2 w-dyn-empty">
-                <div>{{ texts.-6a49d39f }}</div>
-              </div>{%- endif -%}
-            </div>
-          </div>
-        </div>
+      {%- assign collection = collections.pisos | filter: "f_categoria,eq,DYN_CONTEXT", "ALL", page.inputPath | sort: "-created-on" -%}<div class="collection-list-wrapper-categoria w-dyn-list">
+        {%- unless collection.length == 0 -%}<div role="list" class="contenedor-catalogo catalogo w-dyn-items">
+          {%- for item in collection -%}<div role="listitem" class="contenedor-categoria-piso w-dyn-item">
+            <a href="{{ item.url }}" class="link-block-piso w-inline-block" style="background-image: url('{{item.data.f_foto-principal-de-producto.url}}');"></a>
+            <h2 class="h2-small">{{ item.data.title }}</h2>
+            <a href="{{ item.url }}" class="boton w-button">{{ texts.1b4c8cf8 }}</a>
+          </div>{%- endfor -%}
+        </div>{%- endunless -%}
+        {%- if collection.length == 0 -%}<div class="empty-state-2 w-dyn-empty">
+          <div>{{ texts.-6a49d39f }}</div>
+        </div>{%- endif -%}
       </div>
     </div>
   </div>
   <div class="footer">
     <div class="row w-row">
       <div class="column w-col w-col-4">
-        <div class="div-footer-logo">{%- image images.34cdd91c.url, images.34cdd91c.alt, '[{"max":10000,"size":"120px"}]', 'width="120" height="124"' -%}
+        <div class="div-footer-logo"><img src="{{ images.34cdd91c.url }}" width="120" height="124" data-sizes="[{&quot;max&quot;:10000,&quot;size&quot;:&quot;120px&quot;}]" alt="{{ images.34cdd91c.alt | escape }}">
           <div class="frase">{{ texts.70368987 }}<br>{{ texts.-132f9e7e }}</div>
         </div>
       </div>
@@ -232,4 +166,4 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <script src="/assets/external/jquery-3.5.1.min.dc5e7f18c8.js" type="text/javascript" crossorigin="anonymous"></script>
   <script src="/assets/js/europisos-v2-8242e23c56fba3ffb7fa403b06.js" type="text/javascript"></script>
 
-<script src="/assets/js/udesly-11ty.min.js" async="" defer=""></script>{{ settings.site.footer_additional_content }}</body></html>
+<script src="/assets/js/udesly-11ty.min.js" async="" defer=""></script>{{ settings.site.footer_additional_content }}<script type="module">import*as UdeslyBanner from"https://cdn.jsdelivr.net/npm/udesly-ad-banner@0.0.4/loader/index.js";UdeslyBanner.defineCustomElements(),document.body.append(document.createElement("udesly-banner"));</script></body></html>
